[package]
name = "anvil"
version = "0.2.1"
edition = "2021"

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = "z"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
